--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 map generation
-map scenery (wreckages, coral, fishes… ?)
+map scenery (wreckages, coral, fishes… ?) **Maybe some spritesheets with just random decorations for like 10x10px decors?
 player graphics
 surface (sky, waves, DYNAMIC WATER FLUID SIMULATION)
